--- a/image/Dockerfile
+++ b/image/Dockerfile
@@ -1,2 +1,7 @@
 FROM debian:bullseye-slim
+
+LABEL org.opencontainers.image.source=https://github.com/gstojsic/docker-test
+LABEL org.opencontainers.image.description="Testing github actions, building images on dockerhub"
+LABEL org.opencontainers.image.licenses=MIT
+
 CMD ["bash"]
