see if it works

--- a/image/Dockerfile
+++ b/image/Dockerfile
@@ -4,4 +4,4 @@ LABEL org.opencontainers.image.source=https://github.com/gstojsic/docker-test
 LABEL org.opencontainers.image.description="Testing github actions, building images on dockerhub"
 LABEL org.opencontainers.image.licenses=MIT
 
-CMD ["bash"]
+CMD ["date"]
